# module-pose-estimation-conventional

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: gutted.launch  with_takbag.launch
src/: BSbluered.xml  blue_square_score.cpp  blue_square_score.h  cvPointUtilities.cpp  cvPointUtilities.h  dbscan.cpp  dbscan.h  depthToWorld.cpp  depthToWorld.h  drawFunctions.cpp  drawFunctions.h  foreground_extraction.cpp  pose_extraction.cpp  pose_extraction.h  pose_extraction_node.cpp
src/bbox_publisher/: Bbox_publisher.cpp  Bbox_publisher.h  bbox_publisher_node.cpp
src/utils/: cvPointUtilities.cpp  cvPointUtilities.h  depthToWorld.cpp  drawFunctions.cpp  foreground_extraction.cpp  foreground_extraction.h  lineUtils.cpp  lineUtils.h
src/utils/LookupQueue/: LookupQueue.cpp  LookupQueue.h
